--- a/shareit-server/src/main/resources/application.properties
+++ b/shareit-server/src/main/resources/application.properties
@@ -11,7 +11,8 @@ spring.sql.init.mode=always
 #spring.datasource.username=root
 #spring.datasource.password=root
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+#spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
 spring.datasource.username=shareit_user
 spring.datasource.password=shareit
 #---
